USB serial communication now works. There are still issues with the button irq handling and the timer print being mangled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.13)
 # note: this must happen before project()
 include(pico-sdk/pico_sdk_init.cmake)
 
-project(my_project)
+project(boes)
 
 # initialize the Raspberry Pi Pico SDK
 pico_sdk_init()
